<resources>
    <string name="app_name">Chapter 7 App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuItem">Logout</string>
    <string name="userName">User Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SignInEt">If you have not registerd sign in here</string>
    <string name="Signin">Sign in</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt01">Tutor Name</string>
    <string name="txt02">Specialization</string>
    <string name="txt05">Date</string>
    <string name="txt06">Time</string>
    <string name="txt03">A/L Year</string>
    <string name="txt04">Subject</string>
    <string name="txt07">Degree</string>
    <string name="btn02">Add Class</string>
    <string name="btn03">Add Class</string>
    <string name="btn04">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="btnaddmarks">Add marks</string>
    <string name="lblclsid">Class ID   :</string>
    <string name="lbltestnoadd">Test No   :</string>
    <string name="btnnext">next</string>
    <string name="etstudentID">Student ID</string>
    <string name="etmark">Mark</string>
    <string name="btnAdd2">Add another</string>
    <string name="btnend">End</string>
    <string name="btnadd">Add Mark</string>
    <string name="txtTopic">Topic</string>
    <string name="txtMessage">Message:</string>
    <string name="et_Message">Message</string>
    <string name="txtDate">Date</string>
    <string name="txtTime">Time</string>
    <string name="txtClass">Class</string>
    <string name="btn_Add_Announcement">Add</string>
    <string name="btn_Add">Add New</string>
    <string name="btnUpdateAnnc">Update</string>
    <string name="btnDeleteAnnc">Delete</string>
    <string name="name">Name</string>
    <string name="add">+Add</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="Email">Email </string>
    <string name="degree">Degree</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="nic">NIC no.</string>
    <string name="Update">Update</string>
    <string name="deletebtn">delete</string>
    <string name="alYear">A/L Year</string>
    <string name="pwd">Password</string>
    <string name="confpwd">Confirm Password\'</string>
    <string name="logout">Log Out</string>
    <string name="forgetPWD">Forget Password</string>
    <string name="teacherDescription">Description</string>
    <string name="btnphoto"> add photo</string>
</resources>